# proyecto-final-battleship-battleship_pooii

./: .gitignore  CMakeLists.txt  README.md
src/: FirstPlayer.in  Player.cpp  Player.hpp  Player.in  a.out  casillas.cpp  casillas.h  funct.cpp  funct.hpp  main.cpp  out  ship.h  tablero.cpp  tablero.h  texto.txt
